--- a/media/css/sandstone/buttons.less
+++ b/media/css/sandstone/buttons.less
@@ -612,7 +612,7 @@ html[lang^='en'] {
 .download-button .os_linux,
 .download-button .os_linux64,
 // Uncomment this to enable the win64 download buttons:
-// .win7up.x86.x64 .download-button-aurora .os_win,
+// .win7up.x86.x64 .download-button .os_win,
 .android .download-button-desktop,
 .windows.arm .download-button .os_win,
 .linux.arm .download-button .os_linux,
@@ -627,7 +627,7 @@ html[lang^='en'] {
 }
 
 // Uncomment this to enable the win64 download buttons:
-// .win7up.x86.x64 .download-button-aurora .os_win64,
+// .win7up.x86.x64 .download-button .os_win64,
 .linux .download-button .os_linux,
 .linux.x86.x64 .download-button .os_linux64,
 .windows .download-button .os_win,
